fix: align

--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@
     position: absolute;
     width: 1200px;
     height: 187px;
-    left: 25%;
+    left: 17%;
     top:100px;
 
 }
@@ -436,7 +436,7 @@
     position: relative;
     width: 1200px;
     height: 850px;
-    left: 25%;
+    left: 20%;
     top: 70px;
 }
 
@@ -528,7 +528,7 @@
     width: 1200px;
     height: 415px;
     top: 163.75px;
-    left: 25%;
+    left: 17%;
 
 }
 
